--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,128 @@
 /* You can add global styles to this file, and also import other style files */
+
+table.sats td {
+  text-align: right;
+}
+
+table.sats td:first-child {
+  text-align: left;
+}
+
+table {
+  width: 100%;
+}
+
+table.sats td {
+  padding: 0.6em 0.5em;
+}
+
+.sats tr {
+  border-top: 1px dotted gray;
+  border-bottom: 1px dotted gray;
+}
+
+.sats th {
+  padding: 0.5em 0;
+}
+
+.sats th:first-child {
+  padding-left: 2em;
+}
+
+.sats th:not(:first-child) {
+  text-align: right;
+  padding-right: 1em;
+}
+
+.parameter label {
+  display: block;
+}
+
+.parameter {
+  margin: 0.5em 0;
+}
+
+.container-parameter {
+  width: 30em;
+}
+
+.table-result-area {
+  padding-left: 2em;
+}
+
+.smallTable app-interval span {
+  display: inline-block;
+  min-width: 3.5em;
+}
+
+app-interval span:first-child {
+  text-align: right;
+}
+
+.grid-wrapper {
+  margin-top: 1em;
+}
+
+app-table {
+  display: block;
+  margin-top: 1.5em;
+}
+
+.sum-calc {
+  text-align: right;
+}
+
+.multiplication:after {
+  content: '\00d7'
+}
+
+.divisor:after {
+  content: '\00f7'
+}
+
+.end-sum {
+  font-size: 1.5em;
+  text-decoration: double underline;
+}
+
+.result-emphasis {
+  font-size: 1.5em;
+}
+
+.display-none {
+  display: hidden;
+  color: white;
+}
+
+.first-part {
+  color: blue
+}
+
+.second-part {
+  color: red;
+}
+
+.calc-structure {
+  margin-top: 1em;
+}
+
+.calc-structure td,
+.calc-structure th {
+  padding: 0.3em 0;
+}
+
+.small {
+  font-size: 0.8em;
+  font-weight: 200;
+}
+
+.pr-year-table {
+  border-top: 2px solid gray;
+  border-bottom: 2px solid gray;
+  margin: 2em 0;
+}
+
+.pr-year-table td,
+.pr-year-table th {
+  padding: 0.5em 0;
+}
